k8s/testdata/webhook/webhook2.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
webhooks:
  - name: my-webhook.example.com
    matchPolicy: Equivalent
    rules:
      - operations: ['CREATE','UPDATE']
        apiGroups: ['*']
        apiVersions: ['*']
        resources: ['*']
    failurePolicy: 'Ignore'
    sideEffects: None
    clientConfig:
      service:
        namespace: my-namespace
        name: my-webhook
      caBundle: 'PGNhYnVuZGxlPgo='
    matchConditions:
      - name: 'exclude-bootcamp' # Each match condition must have a unique name
        expression: '!(object.metadata.labels.app == "kubernetes-bootcamp")'
